plang/testing/logs/false-incorrect/90/program90.p.p
os2 d95W0 (S5) (K) gT :- n.


t8eTH sN (LJ) :- ((xU v s0G4o; cno, ddWg8; tAXe (NLfQ) (iIUvF); e2kOY (fftKz) NW, b3I (sjN (Vl77)) (Lv), uk1 p5f9 (XI7k) (c7D (x3kc oq)))).


xjcPI fG (dB4Z).


oz.

? (xKSt (C); e2 GY (TW) MU3KI (Re1J), s zr; (g1 p v1M X); (vl4U wmq (p) glV5 F3LsZ)), (wD Qpo9K C77xE K7Ti; xBNqm (Z) zU KPJ).